launchpad-buildd (236) UNRELEASED; urgency=medium

  * Add lxc.cgroup2.* configuration, for compatibility with future
    environments where we use unified cgroup2.  (However, we should keep
    using systemd.unified_cgroup_hierarchy=false until we drop support for
    building xenial; see
    https://bugs.launchpad.net/ubuntu/xenial/+source/systemd/+bug/1962332.)
  * Update deployment docs: riscv64 builders are no longer managed
    separately.
  * Document deployment to qastaging in place of dogfood.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 16 Nov 2023 16:06:07 +0000

launchpad-buildd (235) focal; urgency=medium

  * sourcepackagerecipe: Create /home/buildd inside the chroot if it doesn't
    already exist.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 18 Sep 2023 18:05:25 +0100

launchpad-buildd (234) focal; urgency=medium

  [ Colin Watson ]
  * Add basic documentation of malware scanning for CI builds.
  * Remove restrictions on core snap names; we now install snaps
    corresponding to whatever Launchpad sends.

  [ Dimitri John Ledkov ]
  * buildsnap: refresh preinstalled snaps.

  [ Jürgen Gmach ]
  * Add additional information about production architecture.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 28 Jun 2023 14:55:35 +0100

launchpad-buildd (233) focal; urgency=medium

  * Only create /dev/dm-* in LXD containers if they don't already exist
    (fixes devtmpfs-related failures on riscv64).

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 01 Jun 2023 08:24:53 +0100

launchpad-buildd (232) focal; urgency=medium

  [ Colin Watson ]
  * Drop dependency on apt-transport-https; HTTPS support is integrated into
    apt these days.

  [ Steve Langasek ]
  * Mount devtmpfs in the lxd container, to make losetup -P work.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 24 May 2023 18:23:02 +0100

launchpad-buildd (231) focal; urgency=medium

  * Only ignore .bzr and .git when building source packages from recipes,