@@ -1,5 +1,6 @@
 launchpad-buildd (236) UNRELEASED; urgency=medium
 
+  [ Colin Watson ]
   * Add lxc.cgroup2.* configuration, for compatibility with future
     environments where we use unified cgroup2.  (However, we should keep
     using systemd.unified_cgroup_hierarchy=false until we drop support for
@@ -8,6 +9,14 @@ launchpad-buildd (236) UNRELEASED; urgency=medium
   * Update deployment docs: riscv64 builders are no longer managed
     separately.
   * Document deployment to qastaging in place of dogfood.
+
+  [Simone Pelosi]
+  * Add support for snap components.
+    Snap components are already built by our build jobs but not 
+    added to `built files`. 
+    Add `.comp` filetype to the filter in the `gatherResults` function
+    to process components correctly. 
+    Snap components and `.comp` file type reference: SD149
 
  -- Colin Watson <cjwatson@ubuntu.com>  Thu, 16 Nov 2023 16:06:07 +0000
 
